[package]
name = "c070r-dx"
version = "0.1.0"
authors = ["msukanen <markku.sukanen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
c070r-lib = { path = "../c070r-lib" }

# Debug
dioxus-logger = "0.5.1"
